# MPIR

./: .clang-format  .gitignore  CMakeLists.txt  INSTALL.md  README.md
.github/: tl_packages
.github/ISSUE_TEMPLATE/: instructor_review.md
.github/workflows/: buildtex.yml  clang-format.yml  ctest.yml
cmake/: MPIRConfig.cmake.in
docs/: Comments.tex  Common.tex  Makefile  def-beamer.tex  titlepage.tex
docs/Design/SoftArchitecture/: MG.tex
docs/Design/SoftDetailedDes/: MIS.tex
docs/Presentations/: README.md  footline.tex  titlepage.tex
docs/Presentations/ImplPresentation/: ImplPresentation.tex
docs/Presentations/SRSPresentation/: Makefile  SRSPresentation.tex
docs/Presentations/VnVPlanPresentation/: VnVPlanPresentation.tex
docs/ProblemStatementAndGoals/: Makefile  ProblemStatement.tex
docs/ReflectAndTrace/: ReflectAndTrace.tex
docs/SRS/: Makefile  SRS.tex
docs/VnVPlan/: VnVPlan.tex
docs/VnVReport/: VnVReport.tex
examples/: CMakeLists.txt  example.cpp  playground.cpp  playground.py  reference_solutions.m
include/: fp_concepts.hpp  gmres_ir.hpp  ops.hpp  qdldl.hpp
include/MPIR/: fp_concepts.hpp  gmres_ir.hpp  ops.hpp  qdldl.hpp
include/qdldl-luir/: luir.hpp  residual.hpp  stats.hpp  tblas.hpp
matrices/: outputs.txt
matrices/symmetric/: getSymmetricMatrices.sh
refs/: References.bib
report/: definitions.tex  gscale_thesis_doublespace.sty  notation.tex  outline.md  yex33_2025.tex
report/chapters_after_preface/: 1_introduction.tex  2_literature_review.tex  2_sample_chapter.tex  3_mathematical_formulation.tex  4_implementation.tex  5_experiment_and_evaluation.tex  6_conclusion.tex
report/chapters_before_preface/: 2_abstract.tex  4_acknowledgements.tex  6_declaration_of_academic_achievement.tex
report/data/: matrix_detail.m  matrix_list.txt  pyproject.toml  tabular.ipynb
src/: gmres_ir.cpp
test/: CMakeLists.txt  doctest_main.cpp
